# oofem-SOFFA

./: .clang-format  .gitignore  CMakeLists.txt
cmake/Modules/: GenerateVersion.cmake
src/main/: main.C
src/mpm/: CMakeLists.txt  magnetoelasticelement.C  mpm.h  mpmproblem.C  mpmproblem.h  termlibrary4.C  termlibrary4.h  up.C
src/mpm/MagnetoElasticity/: hardmagneticmooneyrivlincompressiblematerial.h  magnetoelasticcrosssection.C  magnetoelasticcrosssection.h
src/mpm/MagnetoElasticity/CrossSections/: magnetoelasticcrosssection.C  magnetoelasticcrosssection.h
src/mpm/MagnetoElasticity/Materials/: hardmagneticmooneyrivlincompressiblematerial.C  hardmagneticmooneyrivlincompressiblematerial.h  hardmagneticmooneyrivlincompressiblematerialprestrain.C  hardmagneticmooneyrivlincompressiblematerialprestrain.h  magnetoelasticmaterial.h  magnetoelasticmaterialstatus.C  magnetoelasticmaterialstatus.h
src/oofemlib/: CMakeLists.txt  assemblercallback.h  bifurcationinterface.C  bifurcationinterface.h  chartype.h  classfactory.C  classfactory.h  cltypes.C  dofdistributedprimaryfield.C  dofiditem.h  domain.C  eigenmtrx.C  eigenmtrx.h  eigensolver.C  eigensolver.h  eigensolverstability.C  eigensolverstability.h  element.C  element.h  elementmatlabexportmodule.C  elementmatlabexportmodule.h  elementmatlabexportmoduleinterface.C  elementmatlabexportmoduleinterface.h  engngm.C  engngm.h  fei1dlin.C  fei1dlin.h  fei2dquadlin.C  fei2dquadlin.h  fei2dquadquad.C  fei2dquadquad.h  fei3dhexalin.C  fei3dhexalin.h  feinterpol.h  feinterpol2d.C  feinterpol2d.h  feinterpol3d.C  feinterpol3d.h  (+31 more)
(+248 files in other folders)
